# fx-power-report

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/fxpower/: __init__.py  cli.py
src/fxpower/analytics/: cross_rates.py  metrics.py  ranker.py
src/fxpower/app/: fetch.py
src/fxpower/domain/: models.py
src/fxpower/providers/: frankfurter.py
src/fxpower/reporting/: report.py  template.html
src/fxpower/storage/: cache.py
tests/: test_cache_merge.py  test_cache_storage.py  test_cli_smoke.py  test_cross_rate_sanity.py  test_cross_rates.py  test_domain_models.py  test_fetch_pipeline.py  test_frankfurter_provider.py  test_metrics.py  test_ranker.py  test_report_generation.py  test_smoke.py
