[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fxpower"
version = "0.1.0"
description = "FX relative strength / opportunity ranking report (not a forecast)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jan Mrowiec" }]
keywords = ["fx", "currency", "analysis", "report"]
dependencies = [
  "pandas>=2.2",
  "pyarrow>=16.0",
  "requests>=2.32",
  "jinja2>=3.1",
  "plotly>=5.22",
  "typer>=0.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
fxpower = "fxpower.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "responses>=0.25",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "typer.Argument"]
